methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:31: error: not found: value blocmotif1
  blocmotif1(a,b)
  ^